# Open_Source_Group_8

./: .env.sample  .gitignore  README.md  pyproject.toml
account/: decorators.py  forms.py  urls.py  views.py
config/: asgi.py  feature_detail_page.html  urls.py  wsgi.py
config/settings/: default.py  local.py  production.py
config/templates/: base.html  feature_detail_page.html  index.html  movie_detail.html  search.html
config/templates/Components/: carousel.html  footer.html  movieCard.html  navbar.html  reviewCard.html  reviewCarousel.html
config/templates/account/: login.html  profile.html  signup.html
movie/: urls.py  views.py
movie/clients/: tmdb.py
movie/migrations/: 0001_initial.py  0002_movie_moviecast_moviecrew.py  0003_review.py  0004_review_user_review_unique_user_review_per_movie.py
movie/models/: __init__.py  genre.py  movie.py  person.py  review.py
movie/scripts/: fetch_genres.py  fetch_movie_details.py  fetch_popular_movies.py  import_genres.py  import_movies.py  popular_movies.json
movie/static/: styles.css
movie/templatetags/: custom_filters.py
